# voice-assistant

./: .gitignore  README.md  install.sh  main.py  requirements.txt  test.py
models/nlu/: dataset.yaml  train.sh
models/nlu/engine/: nlu_engine.json
models/nlu/engine/custom_entity_parser/parser/: metadata.json
models/nlu/engine/custom_entity_parser/parser/parser_1/: parser
models/nlu/engine/deterministic_intent_parser/: intent_parser.json
models/nlu/engine/probabilistic_intent_parser/: intent_parser.json
models/nlu/engine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
models/nlu/engine/probabilistic_intent_parser/slot_filler_0/: modelxe2gs4.crfsuite  slot_filler.json
nlu/: Cargo.toml  Cross.toml  Dockerfile
nlu/model/: dataset.yaml
nlu/model/engine/custom_entity_parser/parser/parser_2/: parser
nlu/model/engine/custom_entity_parser/parser/parser_4/: parser
nlu/model/engine/custom_entity_parser/parser/parser_5/: parser
nlu/model/engine/probabilistic_intent_parser/slot_filler_0/: model7DP90V.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_1/: modelNg0L8S.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_2/: model96h8Lh.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_3/: model1zQ_S_.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_4/: modelf34DnM.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_5/: modelhApMHK.crfsuite
nlu/model/engine/probabilistic_intent_parser/slot_filler_6/: model__9iLB.crfsuite
nlu/src/: main.rs
(+15 files in other folders)
