[package]
name = "nlu"
version = "0.1.0"
authors = ["William Myers <mwilliammyers@gmail.com>"]
edition = "2018"

[dependencies]
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
log = "0.4.6"
env_logger = "0.6.0"
warp = "0.1.9"
serde_derive = "1.0.82"
serde = "1.0.82"

